@@ -1,3 +1,12 @@
+2005-07-11  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/sine/gstsinesrc.c: (gst_sinesrc_class_init),
+	(gst_sinesrc_init), (gst_sinesrc_create),
+	(gst_sinesrc_set_property), (gst_sinesrc_get_property),
+	(gst_sinesrc_start):
+	* gst/sine/gstsinesrc.h:
+	  removing num-buffers property before moving it
+
 2005-07-10  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac:
